--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+    // APIキーを隠すためのプラグイン
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 //apply plugin: 'kotlin-kapt'
 
@@ -39,16 +42,21 @@ android {
 
 dependencies {
     def nav_version = "2.5.3"
+    def hilt_version = "2.44"
+
+    // hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 //    implementation 'com.squareup.moshi:moshi:1.12.0'
     // moshiはJSON文字列をkotlinオブジェクトに変換する
-//    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation 'androidx.compose.material3:material3:1.0.1'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
