--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     def nav_version = "2.5.3"
     def hilt_version = "2.44"
 
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 
