--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     def nav_version = "2.5.3"
     def hilt_version = "2.44"
 
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.4'
+
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
