ニュース詳細画面をWebViewで表示

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.google.dagger.hilt.android'
     // APIキーを隠すためのプラグイン
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 //apply plugin: 'kotlin-kapt'
 
