設定画面の土台作成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     def nav_version = "2.5.3"
     def hilt_version = "2.44"
 
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.4'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
